Fixes bug behaviour of scrollbars on query results table

--- a/srcd/superset/assets/stylesheets/less/custom-brand.less
+++ b/srcd/superset/assets/stylesheets/less/custom-brand.less
@@ -574,9 +574,20 @@ h4.panel-title {
 }
 
 .sql-toolbar .form-inline .btn.btn-sm.btn-primary:hover,
-.sql-toolbar .form-inline .btn.btn-sm.btn-primary:focus {
+.sql-toolbar .form-inline .btn.btn-sm.btn-primary:focus,
+.sql-toolbar .form-inline .btn.btn-sm.btn-primary:active {
   background-color: darken(@brand-primary, 3%);
+  color: #fff;
+  text-transform: uppercase;
+  padding: 0.75rem 3.25rem;
+  font-weight: 600;
+  font-size: 14px !important;
+  border-radius: 0.2rem;
   border: none;
+
+  i {
+    display: none;
+  }
 }
 
 .sql-toolbar .form-inline .btn.btn-sm.btn-default {
@@ -786,18 +797,20 @@ h4.panel-title {
 
 //= Tables
 
-.ReactVirtualized__Table
-  .ReactVirtualized__Grid.ReactVirtualized__Table__Grid
-  .ReactVirtualized__Grid__innerScrollContainer[style] {
-  height: 1260px !important;
-  max-height: 1260px !important;
-}
-
 .queryPane .SouthPane {
   height: 100% !important;
   .tab-pane {
     overflow-y: visible;
   }
+}
+
+.ReactVirtualized__Grid.ReactVirtualized__Table__Grid {
+  height: 350px !important;
+}
+
+.ReactVirtualized__Table {
+  width: 100%;
+  overflow: scroll;
 }
 
 //= Alerts, Success & Error Mesages
